--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_login_page">LoginPage</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_chat">ChatActivity</string>
 </resources>
