--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="title_activity_login_page">LoginPage</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_chat">ChatActivity</string>
+    <string name="title_activity_send_message">ActivitySendMessage</string>
+    <string name="title_activity_chat_adapter">ChatAdapter</string>
 </resources>
