--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_chat">ChatActivity</string>
     <string name="title_activity_send_message">ActivitySendMessage</string>
     <string name="title_activity_chat_adapter">ChatAdapter</string>
+    <string name="title_activity_chat_overview">ChatOverviewActivity</string>
 </resources>
