--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="title_activity_discovery_two_like">DiscoveryTwoLikeActivity</string>
     <string name="title_activity_discovery_two_favorite">DiscoveryTwoFavoriteActivity</string>
     <string name="title_activity_profile_one">ProfileOneActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
