--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_register_artist">RegisterArtistActivity</string>
+    <string name="title_activity_profile_artist">ProfileArtistActivity</string>
+    <string name="title_activity_profile_venue">ProfileVenueActivity</string>
 </resources>
